Fixes for the container overlapping sidebar.
Makes the sound list alphabetically sorted.

--- a/SoundCamp/soundcamp.css
+++ b/SoundCamp/soundcamp.css
@@ -1,17 +1,21 @@
-#soundcamp_sounds {
+#soundcampTable td {
+	white-space: nowrap;
+}
+
+#soundCamp-wrapper {
     width: 18px;
     height: 16px;
     margin: 2px 5px;
-    opacity: 0.75;
-}
-
-#soundcamp_sounds:hover {
     opacity: 0.95;
 }
 
+#soundCamp-wrapper:hover {
+    opacity: 1;
+}
+
 #soundcampContainer {
-    width: 400px;
-    margin-left: -156px;
+	width: auto;
+    /*margin-left: -156px;*/
 }
 
 .sctooltip {
@@ -21,16 +25,21 @@
     z-index: 999;
 }
 
-.sctooltip-inner {
-    display: none;
-    cursor: default;
-    position: absolute;
-    bottom: 30px;
-    left: 50%;
-    z-index: 999;
-    padding: 10px;
-    background-color: #fff;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
+#soundcampContainer .tooltip-inner {
+	/*max-height: 430px;
+	overflow-y: auto;*/
+}
+
+.sctooltip-outer {
+	display: none;
+	cursor: default;
+	position: absolute;
+	bottom: 30px;
+	left: 50%;
+	z-index: 999;
+	padding: 10px;
+	background-color: rgba(255, 255, 255, 0.952941);
+	box-shadow: rgba(0, 0, 0, 0.701961) 0px 0px 8px;
 }
 
 .sctooltip-inner:before, .sctooltip-inner:after {
@@ -38,7 +47,8 @@
     position: absolute;
     z-index: 1000;
     bottom: -12px;
-    left: 50%;
+    /*left: 50%;*/
+	right: 122px;
     margin-left: -12px;
     border-top: 12px solid white;
     border-left: 12px solid transparent;
@@ -71,6 +81,7 @@
     width: 12px;
     height: 12px;
     opacity: 0.25;
+	cursor: pointer;
 }
 
 .scMsgUnknown {
